Fixed the spacing in the nav-bar, updated some content.

--- a/style.css
+++ b/style.css
@@ -24,17 +24,16 @@ body {
 
 p {
     line-height: 2.5rem;
-    padding: 1.5rem;
+    margin: 0rem;
     font-family: 'Libre Baskerville', Helvetica;
     font-size: 16px;
     letter-spacing: 0.1rem;
-    background-color: var(--text-background);
-    border-radius: 1rem;
 }
 
 h3 {
     font-size: 2.5rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 h4 {
@@ -46,6 +45,14 @@ h4 {
     background-color: var(--highlight);
     padding: 1rem;
     border-radius: 1rem;
+}
+
+.content {
+    background-color: var(--text-background);
+    border-radius: 1rem;
+    padding: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .website-title {
@@ -65,7 +72,7 @@ h4 {
     margin-bottom: 2rem;
     padding: 1rem 6rem 1rem 6rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: var(--accent-2);
     border-radius: 0 0 3rem 3rem;
 }
